Partially fixed subfoodit name overflowing

--- a/src/app/recipes/recipe-card/recipe-card.component.scss
+++ b/src/app/recipes/recipe-card/recipe-card.component.scss
@@ -38,11 +38,18 @@
   }
   &__info-1 {
     padding: 1rem 1.5rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow: hidden;
+    
     &__subfooddit {
+      display: inline;
       text-decoration: none;
       color: var(--color-black);
     }
     &__date {
+      display: inline;
       text-align: right;
     }
   }
