--- a/src/app/recipes/recipe-create/recipe-create.component.scss
+++ b/src/app/recipes/recipe-create/recipe-create.component.scss
@@ -5,7 +5,6 @@
   margin-top: 7rem; // Used for topBar
   padding: 0 2rem 4rem;
   background-color: var(--color-white);
-
   max-width: 100rem;
   font-size: 1.6rem;
 
@@ -23,11 +22,17 @@
   &__subfooddit {
     padding: 1rem 1.5rem;
     background-color: var(--color-grey-light-2);
-
     border-radius: 0.8rem;
 
     a {
       text-decoration: none;
+    }
+      
+    &-selected{
+      vertical-align: bottom;
+      display: inline-block;
+      max-width: 10rem;
+      overflow: hidden;
     }
 
     &-arrow {
